Corrected docker build contexts

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ script:
 
 after_success:
   - docker build -t michaelheinecke/multi-client ./client
-  - docker build -t michaelheinecke/multi-nginx ./client
-  - docker build -t michaelheinecke/multi-server ./client
-  - docker build -t michaelheinecke/multi-worker ./client
+  - docker build -t michaelheinecke/multi-nginx ./nginx
+  - docker build -t michaelheinecke/multi-server ./server
+  - docker build -t michaelheinecke/multi-worker ./worker
   # Log in to docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Push images to docker hub
